unpackaged/main/default/objects/Member_Demographic__c/Member_Demographic__c.object-meta.xml
<CustomObject>
    <label>Member Demographic</label>
    <nameField>
        <displayFormat>MD-{0000000}</displayFormat>
        <label>Member Demographic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>