unpackaged/main/default/objects/Member_Demographic__c/fields/External_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Authorization_Number__c</fullName>
    <externalId>true</externalId>
    <label>External Authorization Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>