unpackaged/main/default/objects/Member_Demographic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Patient_Email_Address__c</columns>
    <columns>Patient_Phone_Number__c</columns>
    <columns>Prudent_In_Data_Staging_ID__c</columns>
    <columns>Authorized_Representative__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>